# bayesite

./: .gitignore  AGENTS.md  BAYESITE_EXTRACTION.md  BAYESWIRE_TAG  CHANGELOG.md  Cargo.toml  NOTICE  NUTS_RS_REV  README.md  bayeswire-vendor.json  implementation-docs.md  implementation-notes.md  justfile
crates/core/: Cargo.toml
crates/core/src/: ancestral.rs  artifact.rs  density.rs  diagnostics.rs  error.rs  fingerprint.rs  generation.rs  ir.rs  json.rs  lib.rs  model.rs  nuts.rs  predictive.rs  protocol.rs  rng.rs  sampler.rs  special.rs  tape.rs  tensor.rs  wasm_abi.rs  workflow.rs
crates/core/tests/: censored_statistical.rs  cli.rs  data_document.rs  diagnostics_fixture.rs  fingerprint_vectors.rs  fixtures_eval.rs  forward_ancestry.rs  generation.rs  generation_review.rs  ir_decode.rs  matvec.rs  prior_predictive_stats.rs  protocol.rs  sampler_stats.rs  short_diagnostics.rs  special_table.rs  truncated.rs  vector_bounds.rs  workflow.rs
crates/core/tests/data/: special_fn_table.json
crates/core/tests/data/cli_models/: cli_bounded_rates.json  cli_linear_regression.json
demo/: .gitignore  glue.js  index.html  worker.js
docs/: artifacts-v0.md  capabilities-v0.md  invariants.md  ir-format-v1.md  ir-v1-tags.md  recover-check-targets-v0.md  recover-scenario-v0.md  releasing.md  sampler.md  sbc-scenario-v0.md  serde-json-spike.md  sha2-fingerprint-spike.md  validation-ladder.md
scripts/: bench_logp_grad.py  check_nuts_rs_oracle.py  check_rust_backend_posterior.py  check_sbc_uniformity.py  check_validation_ladder.py  check_wasm_json_boundary.mjs  gate_report.py  (+10 more)
(+39 files in other folders)
