[package]
name = "bayesite-core"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "Audited Rust core for Bayesite IR workflow"

# SHA-256 is the sole reviewed dependency exception; see docs/sha2-fingerprint-spike.md.
[dependencies]
sha2 = { version = "=0.11.0", default-features = false }

[dev-dependencies]

[lib]
name = "bayesite_core"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "bayesite"
path = "src/bin/bayesite.rs"
